--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
 
-  <div class="container">
-    <div class="row">
+  <div class="container-fluid">
+    <div class="row r1">
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h3>Use the interactive charts below to explore the dataset</h3>
       </div>
     </div>
-    <div class="row">
+    <div class="row r2">
       <div class="col-md-2">
-        <div class="well">
-          <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+        <div class="panel">
+          <div class="panel-heading">
+            <h3 class="panel-title">Test Subject ID</h3>
+          </div>
+          <div class="panel-body text-center">
+            <select id="selDataset"></select>
+          </div>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel">
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
@@ -32,13 +37,13 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
+        <div id="pie"></div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
       </div>
     </div>
-    <div class="row">
+    <div class="row r3">
       <div class="col-md-12">
         <div id="bubble"></div>
       </div>
@@ -47,10 +52,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
-  <script src="./static/js/bonus.js"></script>
-  <script src="samples.json"></script>
-  
+  <script src="./static/js/app.js"></script>  
 </body>
 
 </html>
